fix overflow issues with jenkins widget

--- a/widgets/jenkins-overview/jenkins-overview.styl
+++ b/widgets/jenkins-overview/jenkins-overview.styl
@@ -10,6 +10,7 @@
   display flex
   flex 1
   flex-direction column
+  overflow hidden
 
   .jenkins-all-green
     display flex
@@ -22,9 +23,10 @@
     color lightgreen
     
   .jenkins-job-item
+    height 2.5rem;
     padding 0.2em
     margin-bottom 0.5em
-    font-size 1.5em
+    font-size 1.3em
     font-weight bold
     border-radius 0.25em
     white-space nowrap
